# logistics-data-engineering

./: .dockerignore  .env.example  .gitignore  DE_CASE_STUDY.md  DE_PROJECT_BRIEF.md  Dockerfile  Makefile  README.md  index.html  pyproject.toml  render.yaml  requirements-streamlit.txt  requirements.txt  streamlit_app.py  vercel.json
.github/workflows/: ci.yml  keepwarm.yml  pages.yml
.streamlit/: config.toml
dags/: logistics_pipeline.py
data/sample/: manifest.json
data/sample/bronze/agent_positions/: sample_data.parquet
data/sample/bronze/alerts/: sample_data.parquet
data/sample/bronze/delivery_events/: sample_data.parquet
data/sample/bronze/shipment_events/: sample_data.parquet
data/sample/bronze/vehicle_positions/: sample_data.parquet
data/sample/bronze/vehicle_telemetry/: sample_data.parquet
data/sample/quality_reports/: latest_report.json
dbt_logistics/: .user.yml  dbt_project.yml  profiles.yml
dbt_logistics/macros/: logistics_macros.sql
dbt_logistics/models/: sources.yml
dbt_logistics/models/marts/: _mart_models.yml
dbt_logistics/models/marts/common/: dim_hubs.sql  dim_time.sql
dbt_logistics/models/marts/delivery/: fct_agent_daily.sql  fct_zone_daily.sql
dbt_logistics/models/marts/fleet/: fct_driver_performance.sql  fct_trips.sql
dbt_logistics/models/marts/shipment/: fct_hub_daily.sql  fct_shipments.sql
dbt_logistics/models/staging/delivery/: _delivery_models.yml  stg_agent_positions.sql  stg_delivery_events.sql
dbt_logistics/models/staging/fleet/: _fleet_models.yml  stg_alerts.sql  stg_vehicle_positions.sql  stg_vehicle_telemetry.sql
dbt_logistics/models/staging/shipment/: _shipment_models.yml  stg_shipment_events.sql
docs/: DEMO.md  logistics_platform_blueprint_part1.md  logistics_platform_blueprint_part2.md  logistics_platform_blueprint_part3.md  original_README.md
infrastructure/: docker-compose.yml  kafka_topics.sh
infrastructure/postgres/: init.sql
notebooks/: 01_explore_data.ipynb
scripts/: bootstrap_duckdb_sources.py  generate_sample_data.py
site/: index.html  styles.css
src/: __init__.py  config.py
src/batch/: __init__.py  agent_shift_aggregation.py  journey_reconstruction.py  trip_reconstruction.py
src/dashboard/: __init__.py  app.py
src/domain/: __init__.py  constants.py
src/quality/: quality_checks.py
src/simulators/: __init__.py  base.py  delivery_simulator.py  run_all.py  shipment_simulator.py  vehicle_simulator.py
src/streaming/: __init__.py  bronze_ingestion.py
src/utils/: geo.py  spark_geo.py  validation.py
tests/: __init__.py
tests/integration/: test_quality_pipeline_integration.py
tests/unit/: test_duckdb_bootstrap.py  test_geo_utils.py  test_orchestrator.py  test_quality_checks.py  test_sample_data_generator.py  test_simulators.py  test_validation_utils.py
(+4 files in other folders)
